Add admin pages to see vcs and idp configured

--- a/templates/admin/global_banner.twig
+++ b/templates/admin/global_banner.twig
@@ -1,7 +1,7 @@
 {% extends 'base.twig' %}
 {% import 'macros.twig' as macros %}
 
-{% set page_title = 'Global Message' %}
+{% set page_title = 'Admin Messages' %}
 
 {% block content %}
     <div class="nav--page">
