--- a/templates/environment/environments.twig
+++ b/templates/environment/environments.twig
@@ -6,7 +6,13 @@
 {% set is_admin = current_authorizations.isSuper() %}
 
 {% block content %}
-    <h1>{{ page_title }}</h1>
+    <div class="nav--page">
+        <h1>{{ page_title }}</h1>
+
+        <p class="nav--page__back">
+            <a class="btn btn--back" href="{{ uriFor('admin') }}">Admin Dashboard</a>
+        </p>
+    </div>
 
     {{ block('env_table') }}
 
