--- a/templates/admin/admin_dashboard.twig
+++ b/templates/admin/admin_dashboard.twig
@@ -15,16 +15,6 @@
     </div>
 
 
-    <h2>Manage Deployments</h2>
-    <p>
-        <a href="{{ uriFor('environments') }}" class="btn">
-            {{ macros.icon('leaf') }} Environments
-        </a>
-
-        <a href="{{ uriFor('groups') }}" class="btn">
-            {{ macros.icon('server') }} Target Templates
-        </a>
-    </p>
 
     <h2>User Management</h2>
     <p>
@@ -37,8 +27,21 @@
         </a>
     </p>
 
+    <h2>Manage Deployments</h2>
+    <p>
+        <a href="{{ uriFor('environments') }}" class="btn">
+            {{ macros.icon('leaf') }} Environments
+        </a>
+
+        <a href="{{ uriFor('groups') }}" class="btn">
+            {{ macros.icon('server') }} Target Templates
+        </a>
+    </p>
+
     <h2>Security</h2>
     <p>
+        <a href="{{ uriFor('id_providers') }}" class="btn">Identity Providers</a>
+
         <a href="{{ uriFor('credentials') }}" class="btn btn--primary">
             {{ macros.icon('locked') }} Credentials
         </a>
@@ -50,8 +53,9 @@
 
     <h2>Manage Hal System</h2>
     <p>
+        <a href="{{ uriFor('vcs_providers') }}" class="btn">Version Control Systems</a>
         <a href="{{ uriFor('admin.cache_management') }}" class="btn">Cache Management</a>
-        <a href="{{ uriFor('admin.global_banner') }}" class="btn">Global Banner</a>
+        <a href="{{ uriFor('admin.global_banner') }}" class="btn">Admin Messages</a>
     </p>
 
 {% endblock %}
