--- a/templates/environment/add_environment.twig
+++ b/templates/environment/add_environment.twig
@@ -8,7 +8,7 @@
         <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
+            <a class="btn btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
         </p>
     </div>
 
