--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -4,14 +4,13 @@
 {% set page_title = 'Environment' %}
 
 {% set is_admin = current_authorizations.isSuper() %}
-{% set is_removable = is_admin and not servers_i_dunno %}
 
 {% block content %}
     <div class="nav--page">
         <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
+            <a class="btn btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
         </p>
     </div>
 
@@ -32,10 +31,6 @@
         </li>
     </ul>
 
-    {% if not is_removable %}
-        <p><b>Note:</b> All associated servers must be removed or transferred to remove this environment.</p>
-    {% endif %}
-
     {{ block('actions') }}
 
 {% endblock %}
@@ -48,7 +43,7 @@
             {{ macros.disabled_button('Edit Environment') }}
         {% endif %}
 
-        {% if is_removable %}
+        {% if is_admin %}
             <a class="btn btn--destructive" href="{{ uriFor('environment.remove', {'environment': environment.id}) }}">Remove Environment</a>
         {% else %}
             {{ macros.disabled_button('Remove Environment') }}
