--- a/templates/credentials/add_credential.twig
+++ b/templates/credentials/add_credential.twig
@@ -4,6 +4,11 @@
 {% set js_components = ['add_credential_form'] %}
 {% set page_title = 'Add Credential' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+    <li><a href="{{ uriFor('credentials') }}">Credentials</a></li>
+{% endblock %}
+
 {% block content %}
     <h1>{{ page_title }}</h1>
 
