--- a/templates/credentials/credential.twig
+++ b/templates/credentials/credential.twig
@@ -5,19 +5,16 @@
 
 {% set is_admin = current_authorizations.isSuper() %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+    <li><a href="{{ uriFor('credentials') }}">Credentials</a></li>
+{% endblock %}
+
 {% block content %}
 
     {% if decryption_error %}
         {{ macros.alert('error', 'Unable to decrypt value! Encryption may be misconfigured.') }}
     {% endif %}
-
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('credentials') }}">Back to Credentials</a>
-        </p>
-    </div>
 
     {{ block('meta_table') }}
     {{ block('credential_details') }}
@@ -94,6 +91,10 @@
             {% else %}
                 No
             {% endif %}
+        </li>
+        <li>
+            <h6>Dated Added</h6>
+            {{ credential.created|html5date }}
         </li>
     </ul>
 {% endblock %}
