--- a/templates/user/users.twig
+++ b/templates/user/users.twig
@@ -4,9 +4,11 @@
 
 {% set page_title = 'Users' %}
 
-{% block content %}
-    <h1>{{ page_title }}</h1>
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
 
+{% block content %}
     {{ pagination.pagination(page, last, 'users', {}, {}, 'previous', 'next') }}
 
     {{ block('user_table') }}
