--- a/sass/app/_header.scss
+++ b/sass/app/_header.scss
@@ -5,10 +5,12 @@
     padding: .5em;
 
     .wrapper {
+        max-width: 60em;
+        margin: 0 auto;
+
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0 auto;
 
         text-decoration: none;
     }
