--- a/templates/admin/audit_history.twig
+++ b/templates/admin/audit_history.twig
@@ -4,15 +4,11 @@
 
 {% set page_title = 'Audit History' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('admin') }}">Admin Dashboard</a>
-        </p>
-    </div>
-
     {{ pagination.pagination(page, last, 'admin.audit_history', {}) }}
 
     <table class="table--spacing-medium">
