--- a/templates/admin/cache_management.twig
+++ b/templates/admin/cache_management.twig
@@ -3,6 +3,10 @@
 
 {% set page_title = 'Cache Management' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
+
 {% block content %}
 
     {% if clear_result %}
@@ -12,14 +16,6 @@
             {{ macros.alert('error', clear_message) }}
         {% endif %}
     {% endif %}
-
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('admin') }}">Admin Dashboard</a>
-        </p>
-    </div>
 
     <p>
         <form method="post" class="form--inline">
