--- a/templates/admin/global_banner.twig
+++ b/templates/admin/global_banner.twig
@@ -3,15 +3,11 @@
 
 {% set page_title = 'Admin Messages' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('admin') }}">Admin Dashboard</a>
-        </p>
-    </div>
-
     {{ block('meta') }}
     {{ block('form') }}
 
