--- a/templates/admin/system_dashboard.twig
+++ b/templates/admin/system_dashboard.twig
@@ -3,15 +3,11 @@
 
 {% set page_title = 'System Dashboard' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('admin') }}">Back to Admin Dashboard</a>
-        </p>
-    </div>
-
     <h2>Server Information</h2>
     <ul class="meta-box">
         <li>
