--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -13,7 +13,7 @@
         <h1>{{ page_title }}</h1>
 
         <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Go to Application Dashboard</a>
+            <a class="btn btn--back" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Go to Application Dashboard</a>
         </p>
     </div>
 
@@ -28,12 +28,12 @@
 {% block meta %}
     <ul class="meta-box">
         <li>
-            <h6>Name</h6>
-            {{ application.identifier }}
+            <h6>ID</h6>
+            {{ application.id|short_guid }}
         </li>
 
         <li>
-            <h6>Description</h6>
+            <h6>Name</h6>
             {{ application.name }}
         </li>
 
@@ -56,24 +56,22 @@
 {% endblock %}
 
 {% block actions %}
-    <ul class="list--bare">
-        <li><a class="btn" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Encrypted Configuration</a></li>
-        <li><a class="btn" href="{{ uriFor('targets', {'application': application.id}) }}">Deployment Targets</a></li>
-        <li>
-            {% if can_edit %}
-                <a class="btn btn--action" href="{{ uriFor('application.edit', {'application': application.id}) }}">Edit Application</a>
-            {% else %}
-                {{ macros.disabled_button('Edit Application') }}
-            {% endif %}
-        </li>
-        <li>
-            {% if can_remove %}
-                <a class="btn btn--destructive" href="{{ uriFor('application.remove', {'application': application.id}) }}">Remove Application</a>
-            {% else %}
-                {{ macros.disabled_button('Remove Application') }}
-            {% endif %}
-        </li>
-    </ul>
+    <p>
+        <a class="btn" href="{{ uriFor('encrypted.configuration', {'application': application.id}) }}">Encrypted Configuration</a></li>
+        <a class="btn" href="{{ uriFor('targets', {'application': application.id}) }}">Deployment Targets</a></li>
+
+        {% if can_edit %}
+            <a class="btn btn--action" href="{{ uriFor('application.edit', {'application': application.id}) }}">Edit Application</a>
+        {% else %}
+            {{ macros.disabled_button('Edit Application') }}
+        {% endif %}
+
+        {% if can_remove %}
+            <a class="btn btn--destructive" href="{{ uriFor('application.remove', {'application': application.id}) }}">Remove Application</a>
+        {% else %}
+            {{ macros.disabled_button('Remove Application') }}
+        {% endif %}
+    </p>
 {% endblock %}
 
 {% block authorization_and_permissions %}
@@ -92,9 +90,7 @@
                 {% for permission in permissions %}
                     {% set from_org = permission.organization ? '- organization' : '' %}
                     <li>
-                        <a href="{{ uriFor('user', {'user': permission.user.id }) }}">
-                            {{ permission.user.username|lower }}
-                        </a>
+                        {{ macros.user_display_link(permission.user) }}
                         ({{ permission.type }}{{ from_org }})
                     </li>
                 {% endfor %}
@@ -108,23 +104,19 @@
             </p>
         {% endif %}
 
-        <ul class="list--bare">
-            <li>
-                {% if can_edit %}
-                    <a class="btn" href="{{ uriFor('application_permission.add', {'application': application.id})}}">Grant access to other users</a>
-                {% else %}
-                    {{ macros.disabled_button('Grant access to other users') }}
-                {% endif %}
-            </li>
+        <p>
+            {% if can_edit %}
+                <a class="btn" href="{{ uriFor('application_permission.add', {'application': application.id})}}">Grant access to other users</a>
+            {% else %}
+                {{ macros.disabled_button('Grant access to other users') }}
+            {% endif %}
 
-            <li>
-                {% if can_edit and permissions %}
-                    <a href="{{ uriFor('application_permission.remove', {'application': application.id}) }}">Manage or revoke permissions</a>
-                {% else %}
-                    {{ macros.disabled_button('Manage or revoke permissions') }}
-                {% endif %}
-            </li>
-        </ul>
+            {% if can_edit and permissions %}
+                <a href="{{ uriFor('application_permission.remove', {'application': application.id}) }}">Manage or revoke permissions</a>
+            {% else %}
+                {{ macros.disabled_button('Manage or revoke permissions') }}
+            {% endif %}
+        </p>
 
     </div>
 {% endblock %}
