--- a/templates/credentials/credentials.twig
+++ b/templates/credentials/credentials.twig
@@ -5,9 +5,11 @@
 
 {% set is_admin = current_authorizations.isSuper() %}
 
-{% block content %}
-    <h1>{{ page_title }}</h1>
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+{% endblock %}
 
+{% block content %}
     <p>
         Credentials are secret passwords, API keys or other secret information that is used by to access other resources by
         Hal such as Artifacts, Deployments, Version Control, or Identity Providers.
