--- a/templates/credentials/edit_credential.twig
+++ b/templates/credentials/edit_credential.twig
@@ -4,9 +4,13 @@
 {% set js_components = ['add_credential_form'] %}
 {% set page_title = 'Edit Credential' %}
 
-{% block content %}
-    <h1>{{ page_title }}</h1>
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+    <li><a href="{{ uriFor('credentials') }}">Credentials</a></li>
+    <li><a href="{{ uriFor('credential', {'credential': credential.id}) }}">{{ credential.name }}</a></li>
+{% endblock %}
 
+{% block content %}
     <form method="post" class="js-credentials-form">
 
         {{ form_macros.formErrors(errors) }}
