--- a/templates/environment/edit_environment.twig
+++ b/templates/environment/edit_environment.twig
@@ -3,15 +3,13 @@
 
 {% set page_title = 'Edit Environment' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+    <li><a href="{{ uriFor('environments') }}">Environments</a></li>
+    <li><a href="{{ uriFor('environment', {'environment': environment.id}) }}">{{ environment.name }}</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
-        </p>
-    </div>
-
     {{ form_macros.formErrors(errors) }}
 
     <form method="post">
