--- a/templates/environment/environment.twig
+++ b/templates/environment/environment.twig
@@ -5,15 +5,12 @@
 
 {% set is_admin = current_authorizations.isSuper() %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+    <li><a href="{{ uriFor('environments') }}">Environmnents</a></li>
+{% endblock %}
+
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--back" href="{{ uriFor('environments') }}">Back to Environments</a>
-        </p>
-    </div>
-
     <ul class="meta-box">
         <li>
             <h6>ID</h6>
