--- a/templates/application/dashboard.twig
+++ b/templates/application/dashboard.twig
@@ -5,14 +5,15 @@
 
 {% set page_title = 'Application Dashboard' %}
 
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+    <li><a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a></li>
+{% endblock %}
+
 {% set can_user_build = current_authorizations.canBuild(application) %}
 {% set can_user_deploy = current_authorizations.canDeploy(application, selected_environment) %}
 
 {% block content %}
-    <div class="nav--page">
-        <h1>{{ page_title }}</h1>
-    </div>
-
     {{ block('env_picker') }}
 
     {% if selected_environment %}
@@ -78,16 +79,14 @@
 {% endblock %}
 
 {% block page_buttons %}
-    <ul class="list--bare">
-        <li>
-            {% if can_user_build %}
-                <a class="btn btn--action" href="{{ uriFor('build.start', {'application': application.id}) }}">Start New Build</a>
-            {% else %}
-                {{ macros.disabled_button('Start New Build') }}
-            {% endif %}
-        </li>
-        <li><a class="btn" href="{{ uriFor('build.history.page1', {'application': application.id}) }}">Build History</a></li>
-        <li><a class="btn" href="{{ uriFor('release.history.page1', {'application': application.id}) }}">Release History</a></li>
-        <li><a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Manage Application</a></li>
-    </ul>
+    <p>
+        {% if can_user_build %}
+            <a class="btn btn--action" href="{{ uriFor('build.start', {'application': application.id}) }}">Start New Build</a>
+        {% else %}
+            {{ macros.disabled_button('Start New Build') }}
+        {% endif %}
+        <a class="btn" href="{{ uriFor('build.history.page1', {'application': application.id}) }}">Build History</a>
+        <a class="btn" href="{{ uriFor('release.history.page1', {'application': application.id}) }}">Release History</a>
+        <a class="btn" href="{{ uriFor('application', {'application': application.id}) }}">Manage Application</a>
+    </p>
 {% endblock %}
