--- a/templates/delete.confirm.twig
+++ b/templates/delete.confirm.twig
@@ -21,74 +21,87 @@
     {% set entity_type = 'User Token' %}
 {% endif %}
 
-{% block content %}
-    <h1>
-        {% if remove.param %}
-            Remove {{ entity_type }}
-        {% else %}
-            Confirm Removal
-        {% endif %}
-    </h1>
+{% if remove.param %}
+    {% set page_title = 'Remove ' ~ entity_type %}
+{% else %}
+    {% set page_title = 'Confirm Removal' %}
+{% endif %}
 
+{% block breadcrumb_links %}
     {% if remove.param == 'organization' %}
-        {{ block('organization_box') }}
-
+        <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+        <li><a href="{{ uriFor('organization', {'organization': remove.entity.id}) }}">{{ remove.entity.name }}</a></li>
     {% elseif remove.param == 'application' %}
-        {{ block('application_box') }}
-    {% elseif remove.param == 'target' %}
-        {{ block('target_box') }}
-    {% elseif remove.param == 'encrypted' %}
-        {{ block('encrypted_box') }}
-
-    {% elseif remove.param == 'group' %}
-        {{ block('group_box') }}
+        <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+        <li><a href="{{ uriFor('application', {'application': remove.entity.id}) }}">{{ remove.entity.name }}</a></li>
     {% elseif remove.param == 'environment' %}
-        {{ block('environment_box') }}
+        <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+        <li><a href="{{ uriFor('environments') }}">Environments</a></li>
+        <li><a href="{{ uriFor('environment', {'environment': remove.entity.id}) }}">{{ remove.entity.name }}</a></li>
     {% elseif remove.param == 'credential' %}
-        {{ block('credential_box') }}
+        <li><a href="{{ uriFor('admin') }}">Administrators</a></li>
+        <li><a href="{{ uriFor('credentials') }}">Credentials</a></li>
+        <li><a href="{{ uriFor('credential', {'credential': remove.entity.id}) }}">{{ remove.entity.name }}</a></li>
+    {% endif %}
+
+{% endblock %}
+
+{% block content %}
+    {% if remove.param == 'organization' %}
+        {{ block('organization_meta') }}
+    {% elseif remove.param == 'application' %}
+        {{ block('application_meta') }}
+    {% elseif remove.param == 'target' %}
+        {{ block('target_meta') }}
+    {% elseif remove.param == 'encrypted' %}
+        {{ block('encrypted_meta') }}
+    {% elseif remove.param == 'group' %}
+        {{ block('group_meta') }}
+    {% elseif remove.param == 'environment' %}
+        {{ block('environment_meta') }}
+    {% elseif remove.param == 'credential' %}
+        {{ block('credential_meta') }}
 
     {% elseif remove.param == 'token' %}
-        {{ block('token_box') }}
+        {{ block('token_meta') }}
     {% endif %}
 
     <h3>Are you sure?</h3>
     <p>You're about to permanently remove this <b>{{ entity_type }}</b>. Do you want to continue?</p>
 
-    <form class="form-wrapper" method="post">
-        <ul class="list--bare">
-            <li><input class="btn btn--destructive" type="submit" value="Remove"></li>
-            <li>{{ block('cancel_button') }}</li>
-        </ul>
+    <form method="post">
+        <button type="submit" class="btn btn--destructive">{{ page_title}}</button>
+        {{ block('cancel_button') }}
     </form>
 
 {% endblock %}
 
 {% block cancel_button %}
     {% if remove.param == 'organization' %}
-        <a class="btn" href="{{ uriFor('organization', {'organization': remove.entity.id}) }}">Cancel</a>
+        <a href="{{ uriFor('organization', {'organization': remove.entity.id}) }}">Cancel</a>
 
     {% elseif remove.param == 'application' %}
-        <a class="btn" href="{{ uriFor('application', {'application': remove.entity.id}) }}">Cancel</a>
+        <a href="{{ uriFor('application', {'application': remove.entity.id}) }}">Cancel</a>
     {% elseif remove.param == 'target' %}
-        <a class="btn" href="{{ uriFor('target', {'target': remove.entity.id, 'application': entities.application.id}) }}">Cancel</a>
+        <a href="{{ uriFor('target', {'target': remove.entity.id, 'application': entities.application.id}) }}">Cancel</a>
     {% elseif remove.param == 'encrypted' %}
-        <a class="btn" href="{{ uriFor('encrypted', {'encrypted': remove.entity.id, 'application': entities.application.id}) }}">Cancel</a>
+        <a href="{{ uriFor('encrypted', {'encrypted': remove.entity.id, 'application': entities.application.id}) }}">Cancel</a>
 
     {% elseif remove.param == 'group' %}
-        <a class="btn" href="{{ uriFor('group', {'group': remove.entity.id}) }}">Cancel</a>
+        <a href="{{ uriFor('group', {'group': remove.entity.id}) }}">Cancel</a>
     {% elseif remove.param == 'environment' %}
-        <a class="btn" href="{{ uriFor('environment', {'environment': remove.entity.id}) }}">Cancel</a>
+        <a href="{{ uriFor('environment', {'environment': remove.entity.id}) }}">Cancel</a>
     {% elseif remove.param == 'credential' %}
-        <a class="btn" href="{{ uriFor('credential', {'credential': remove.entity.id}) }}">Cancel</a>
+        <a href="{{ uriFor('credential', {'credential': remove.entity.id}) }}">Cancel</a>
 
     {% elseif remove.param == 'token' %}
-        <a class="btn" href="{{ uriFor('user', {'user': entities.user.id}) }}">Cancel</a>
+        <a href="{{ uriFor('user', {'user': entities.user.id}) }}">Cancel</a>
     {% else %}
-        <a class="btn" href="javascript:history.go(-1)">Cancel</a>
+        <a href="javascript:history.go(-1)">Cancel</a>
     {% endif %}
 {% endblock %}
 
-{% block group_box %}
+{% block group_meta %}
     {% set name_label =  remove.entity.type == 'rsync' ? 'Hostname' : 'Region' %}
 
     <ul class="meta-box">
@@ -110,13 +123,16 @@
 
 {% endblock %}
 
-{% block environment_box %}
+{% block environment_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Name</h6>
             {{ remove.entity.name }}
         </li>
-
         <li>
             <h6>Is Production Environment?</h6>
             {{ remove.entity.isProduction ? 'Yes' : 'No' }}
@@ -124,33 +140,33 @@
     </ul>
 {% endblock %}
 
-{% block credential_box %}
+{% block credential_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Name</h6>
             {{ remove.entity.name }}
         </li>
-
         <li>
             <h6>Type</h6>
-            {% if remove.entity.type == 'aws_static' %}
-                AWS Static Token
-            {% elseif remove.entity.type == 'aws_role' %}
-                AWS STS Role
-            {% elseif remove.entity.type == 'privatekey' %}
-                Private Key
-            {% endif %}
+            {{ remove.entity|credential_type }}
         </li>
     </ul>
 {% endblock %}
 
-{% block organization_box %}
+{% block organization_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Name</h6>
             {{ remove.entity.identifier }}
         </li>
-
         <li>
             <h6>Description</h6>
             {{ remove.entity.name }}
@@ -158,18 +174,16 @@
     </ul>
 {% endblock %}
 
-{% block application_box %}
+{% block application_meta %}
     <ul class="meta-box">
         <li>
-            <h6>Name</h6>
-            {{ remove.entity.identifier }}
+            <h6>ID</h6>
+            {{ remove.entity.id }}
         </li>
-
         <li>
-            <h6>Description</h6>
+            <h6>Name</h6>
             {{ remove.entity.name }}
         </li>
-
         <li>
             <h6>Source Control</h6>
             {{ git_macros.vcs(remove.entity) }}
@@ -177,23 +191,24 @@
     </ul>
 {% endblock %}
 
-{% block target_box %}
+{% block target_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Application</h6>
             {{ remove.entity.application.name }}
         </li>
-
         <li>
             <h6>Environment</h6>
             {{ remove.entity.group.environment.name }}
         </li>
-
         <li>
             <h6>Name</h6>
             {{ remove.entity.name ?: 'None' }}
         </li>
-
         <li>
             <h6>Type</h6>
             {{ remove.entity.group.format(true) }}
@@ -201,13 +216,16 @@
     </ul>
 {% endblock %}
 
-{% block encrypted_box %}
+{% block encrypted_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Application</h6>
             {{ remove.entity.application.name }}
         </li>
-
         <li>
             <h6>Environment</h6>
             {% if remove.entity.environment %}
@@ -216,7 +234,6 @@
                 Global (Available in all environments)
             {% endif %}
         </li>
-
         <li>
             <h6>Property Name</h6>
             <code>{{ remove.entity.name }}</code>
@@ -224,8 +241,12 @@
     </ul>
 {% endblock %}
 
-{% block token_box %}
+{% block token_meta %}
     <ul class="meta-box">
+        <li>
+            <h6>ID</h6>
+            {{ remove.entity.id }}
+        </li>
         <li>
             <h6>Name</h6>
             {{ remove.entity.name }}
