--- a/templates/help/partial.application_setup.s3.twig
+++ b/templates/help/partial.application_setup.s3.twig
@@ -67,8 +67,8 @@
     </li>
     <li>
         <b>Create AWS access token with correct permissions.</b>
-        <p class="mvn">This can be shared between multiple applications, but the token must have the following permissions:</p>
-        <ul class="list--bare">
+        <p>This can be shared between multiple applications, but the token must have the following permissions:</p>
+        <ul>
             <li><code>s3:GetObject</code></li>
             <li><code>s3:ListAllMyBuckets</code></li>
             <li><code>s3:ListBucket</code></li>
