--- a/templates/home.twig
+++ b/templates/home.twig
@@ -51,7 +51,7 @@
 {% block favorite_apps %}
 
     <section>
-        <ul class="list--bare cards">
+        <ul class="cards">
             <li>
                 {% for application in favorites %}
                     <article class="card">
