--- a/templates/partial.build_table.twig
+++ b/templates/partial.build_table.twig
@@ -6,8 +6,8 @@
         <tr>
             <th>Build</th>
             <th>Env</th>
-            <th>Source Code</th>
-            <th>Built On</th>
+            <th>Source Control</th>
+            <th class="table-priority-55">Built On</th>
             <th class="t10"></th>
         </tr>
     </thead>
@@ -17,18 +17,13 @@
             <td>{{ macros.job_status_prefix(build, true) }}</td>
             <td>{{ build.environment ? build.environment.name : 'Any' }}</td>
             <td>
-                {% set is_gitref_current = githubCommitIsCurrent(build.application.github.owner, build.application.github.repository, build.reference, build.commit) %}
-                {{ git_macros.gitref(build, false, is_gitref_current, true) }}
-                {{ git_macros.gitcommit(build) }}
+                {{ git_macros.vcs_ref(build.application, build) }}
+                {{ git_macros.vcs_commit(build.application, build) }}
             </td>
-            <td>
+            <td class="table-priority-55">
                 {{ build.created|html5date }}
                 by
-                {% if build.user %}
-                    {{ build.user.username }}
-                {% else %}
-                    Unknown
-                {% endif %}
+                {{ macros.user_display_link(build.user) }}
             </td>
 
             {# this is a hacky way to let the frontend know if a user can push a build once it is available. #}
