--- a/templates/release/releases.twig
+++ b/templates/release/releases.twig
@@ -2,28 +2,25 @@
 {% import 'macros.pagination.twig' as pagination %}
 {% set js_components = ['job_table_updater'] %}
 
-{% set page_title = 'Release History : ' ~ application.name %}
+{% set page_title = 'Release History' %}
+
+{% block breadcrumb_links %}
+    <li><a href="{{ uriFor('applications') }}">Applications</a></li>
+    <li><a href="{{ uriFor('application', {'application': application.id}) }}">{{ application.name }}</a></li>
+    <li><a href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Dashboard</a></li>
+{% endblock %}
+
 
 {% block content %}
-
-    <div class="nav--page">
-        <h1>Release History - <b>{{ application.name }}</b></h1>
-
-        <p class="nav--page__back">
-            <a class="btn btn--small btn--back" href="{{ uriFor('application.dashboard', {'application': application.id}) }}">Back to Application Dashboard</a>
-        </p>
-    </div>
-
     {{ block('search') }}
 
     {% include 'partial.release_table.twig' with {'releases': releases} only %}
 
     {{ pagination.pagination(page, last, 'release.history', {'application': application.id}, {search: search_filter}) }}
-
 {% endblock %}
 
 {% block search %}
-    <h3>Search by reference:</h3>
+    <h3>Search by source control</h3>
     <form method="get" class="search-filter">
         <input
             class="text-input"
